# BabaIsYou

./: .gitignore  CMakeLists.txt  Dockerfile  DokumentacjaWstepna.md  README.md  docker-compose.yml
src/: AudioManager.cpp  AudioManager.h  Board.cpp  Board.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Noun.cpp  Noun.h  ObjectOnField.cpp  ObjectOnField.h  Operator.cpp  Operator.h  Parameters.cpp  Parameters.h  Property.cpp  Property.h  SolidObject.cpp  SolidObject.h  Window.cpp  Window.h  levels.txt  main.cpp  paths.h
src/SolidObjects/: Baba.cpp  Baba.h  Flag.cpp  Flag.h  Lava.cpp  Lava.h  Rock.cpp  Rock.h  Skull.cpp  Skull.h  Tree.cpp  Tree.h  Wall.cpp  Wall.h  Water.cpp  Water.h
tests/: baba_tests.cpp  board_tests.cpp  noun_tests.cpp  solid_object_tests.cpp
